Fix button alignment and fix locale and cards

--- a/src/components/button/_button-new.scss
+++ b/src/components/button/_button-new.scss
@@ -211,19 +211,12 @@
 
 // Icon/Actions button icons should be better-centered against the focus state.
 .btn-actions,
+.btn-icon,
 .btn-close {
   > .icon {
-    position: relative;
-    top: -1px;
-    left: 0;
-  }
-}
-
-.btn-icon {
-  >.icon {
-    position: relative;
-    top: 2px;
-    left: 0;
+    display: inline-flex;
+    vertical-align: middle;
+    flex-direction: row;
   }
 }
 
